# Messageforwarder

./: .replit  .secret_key  README.md  anon.session  anon.session-journal  app.py  auth_session.session  bot_session.session  channel_config.json  forms.py  main.py  models.py  pyproject.toml  requirements.txt  text_replacements.json
attached_assets/: Pasted--main-INFO-Raw-event-UpdateUserStatus-2025-03-06-10-09-10-298-telethon-network-mtprotosend-1741255762764.txt  Pasted-2025-03-11-12-07-53-198-werkzeug-INFO-172-31-128-115-11-Mar-2025-12-07-53-GET-dashboar-1741694897144.txt  Pasted-6-10-12-31-674-main-INFO-Message-2025-03-06-10-12-31-674-main-INFO-Comparing-chan-1741255963981.txt  Pasted-72-31-128-44-04-Mar-2025-05-42-20-GET-HTTP-1-1-200-172-31-128-44-04-Mar-2025-05-42--1741066978736.txt  Pasted-k-mtprotosender-DEBUG-Starting-send-loop-2025-03-06-12-06-04-643-telethon-network-mtprotosende-1741262788463.txt  Pasted-main-INFO-User-already-logged-in-redirecting-to-dashboard-2025-03-06-12-35-35-116-werkzeug--1741264546178.txt  Pasted-rk-mtprotosender-DEBUG-Connection-success-2025-03-06-12-12-21-469-telethon-network-mtprotosen-1741263164496.txt  main.py
docs/: GUIDE.md  HOW_IT_WORKS.md
sessions/: +917042740180.session  +917042740180.session-journal  +917056636354.session  +919891357354.session  +919891357354.session-journal  +919971729180.session
static/css/: style.css
static/js/: main.js
templates/: 404.html  500.html  dashboard.html  error.html  login.html
templates/auth/: error.html  login.html  register.html
templates/dashboard/: accounts.html  overview.html  (+3 more)
(+1 files in other folders)
